# SSP

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/julia/: Manifest.toml  Project.toml  constraint.jl  ssp2_example.jl  ssp_comparison.jl  ssp_constrained.jl  ssp_constrained_paper.jl  ssp_dilation.jl
examples/python/: simple_smoothing_example.py  ssp1_bilinear_example.py  ssp2_example.py
src/julia/SSP/: Project.toml  README.md
src/julia/SSP/ext/: SSPChainRulesCoreExt.jl
src/julia/SSP/src/: SSP.jl  constrain.jl  convolve.jl  definitions.jl  interpolate.jl  kernel.jl  pad.jl  project.jl  pythonic_api.jl
src/julia/SSP/test/: Project.toml  aqua.jl  constrain.jl  convolve.jl  interpolate.jl  kernel.jl  pad.jl  project.jl  pythonic_api.jl  runtests.jl
src/python/ssp/: __init__.py  core.py  utils.py
src/python/ssp_topopt/: __init__.py  core.py  utils.py
tests/python/: test_ssp1_bilinear.py  test_ssp2.py  test_ssp_first_order.py
